--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ name = "lpc177x_8x-hal"
 readme = "README.md"
 repository = "https://github.com/thenewwazoo/lpc177x_8x-hal"
 version = "0.1.0"
+description = "Implementation of the `embedded-hal` traits for LPC177x/8x"
 
 [features]
 default = ["LQFP208", "rt"]
