--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,15 @@
 [package]
 authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
+description = "Implementation of the `embedded-hal` traits for LPC177x/8x"
 keywords = ["no-std", "arm", "cortex-m", "lpc17xx", "lpc177x_8x"]
 license = "MIT OR Apache-2.0"
 name = "lpc177x_8x-hal"
 readme = "README.md"
 repository = "https://github.com/thenewwazoo/lpc177x_8x-hal"
-version = "0.1.2"
-description = "Implementation of the `embedded-hal` traits for LPC177x/8x"
-
-[features]
-default = ["LQFP208", "rt"]
-rt = ["lpc177x_8x/rt"]
-LQFP208 = []
-# Different packages have differing numbers of GPIOs; right now, only the 208-pin packages
-# are supported.
-#TFBGA208 = []
-#TFBGA180 = []
-#LQFP144 = []
+version = "0.2.0"
 
 [dependencies]
+cortex-m = "0.5.7"
 nb = "0.1.1"
 
 [dependencies.embedded-hal]
@@ -27,3 +18,12 @@ version = "0.2"
 
 [dependencies.lpc177x_8x]
 version = "0.13.3"
+
+[features]
+LQFP208 = []
+default = ["LQFP208", "rt"]
+rt = ["lpc177x_8x/rt"]
+
+# This HAL crate depends on not-yet-released ADC traits
+[patch.crates-io.embedded-hal]
+git = "https://github.com/rust-embedded/embedded-hal.git"
