--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,15 @@ license = "MIT OR Apache-2.0"
 name = "lpc177x_8x-hal"
 readme = "README.md"
 repository = "https://github.com/thenewwazoo/lpc177x_8x-hal"
-version = "0.3.0"
+version = "0.4.0"
 
 [dependencies]
 cortex-m = "0.5.7"
 nb = "0.1.1"
+
+[dependencies.void]
+version = "1.0.2"
+default-features = false
 
 [dependencies.embedded-hal]
 features = ["unproven"]
